# django-ecommerce

./: .gitignore  README.md  setup.cfg  setup.py
ecommerce/cart/: models.py  serializers.py  urls.py  views.py
ecommerce/cart/migrations/: 0001_initial.py  0002_alter_cartitem_quantity.py
ecommerce/ecommerce/: models.py  settings.py  urls.py
ecommerce/main/: urls.py  views.py
ecommerce/orders/: models.py  urls.py  views.py
ecommerce/orders/migrations/: 0001_initial.py  0002_remove_order_product_order_status_orderitem.py
ecommerce/products/: admin.py  forms.py  models.py  urls.py  views.py
ecommerce/products/migrations/: 0001_initial.py  0002_alter_image_image.py  0003_add_categories.py  0004_delete_category.py  0005_category_alter_product_category.py  0006_alter_product_category.py  0006_carausel_alter_product_category.py
ecommerce/static/js/: app.js
ecommerce/templates/: base.html  main.html
ecommerce/templates/cart/: view_cart.html
ecommerce/templates/components/: _footer.html  _navbar.html
ecommerce/templates/errors/: not_allowed.html
ecommerce/templates/main/: main.html
ecommerce/templates/orders/: list_orders.html
ecommerce/templates/products/: list_products.html  view_product.html
ecommerce/templates/users/: _shared.html  login.html  register.html  update_profile.html
ecommerce/theme/static_src/: tailwind.config.js
ecommerce/users/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
ecommerce/users/migrations/: 0001_initial.py
