[metadata]
name = ecommerce
author = Awesome People
description = ECommerce app for GAU Django course final
long_description = file: README.md

[options]
zip_safe = False
python_requires = >=3.9
install_requires =
    Django==4.1.5
    djangorestframework==3.14.0
    django-tailwind==3.4.0
    Pillow==9.4.0
